[gd_scene load_steps=23 format=3 uid="uid://yswmsrnarvbp"]

[ext_resource type="Script" uid="uid://djb8xe7qvve2b" path="res://game/ghost.gd" id="1_obmiq"]
[ext_resource type="Texture2D" uid="uid://cej706mo1px8p" path="res://sprites/character.png" id="2_obmiq"]
[ext_resource type="Shader" uid="uid://dw210xclj7cm4" path="res://shaders/ghost_skin.gdshader" id="2_xtt71"]
[ext_resource type="Texture2D" uid="uid://byfcb36l3d74j" path="res://sprites/character_skinmap.png" id="3_kjq22"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hiw70"]
resource_local_to_scene = true
shader = ExtResource("2_xtt71")
shader_parameter/Skin = ExtResource("3_kjq22")
shader_parameter/SkinDimension = Vector2(11, 6)
shader_parameter/cloak_color = Color(0.212333, 0, 0.49, 1)
shader_parameter/ghost_alpha = 0.5

[sub_resource type="AtlasTexture" id="AtlasTexture_xtt71"]
atlas = ExtResource("2_obmiq")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbgms"]
atlas = ExtResource("2_obmiq")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8c3p"]
atlas = ExtResource("2_obmiq")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1s1"]
atlas = ExtResource("2_obmiq")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj2wd"]
atlas = ExtResource("2_obmiq")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3str0"]
atlas = ExtResource("2_obmiq")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlq7t"]
atlas = ExtResource("2_obmiq")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny5wb"]
atlas = ExtResource("2_obmiq")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c127x"]
atlas = ExtResource("2_obmiq")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5csun"]
atlas = ExtResource("2_obmiq")
region = Rect2(384, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o5hg"]
atlas = ExtResource("2_obmiq")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f36x"]
atlas = ExtResource("2_obmiq")
region = Rect2(64, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_hiw70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtt71")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbgms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8c3p")
}],
"loop": true,
"name": &"in_air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1s1")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj2wd")
}],
"loop": false,
"name": &"land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3str0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlq7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny5wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c127x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5csun")
}],
"loop": false,
"name": &"squish",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o5hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f36x")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6attn"]
size = Vector2(17.3333, 167.5)

[sub_resource type="Animation" id="Animation_kjq22"]
length = 0.001

[sub_resource type="Animation" id="Animation_xtt71"]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/ghost_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hiw70"]
_data = {
&"RESET": SubResource("Animation_kjq22"),
&"fade": SubResource("Animation_xtt71")
}

[node name="ghost" type="Node2D"]
script = ExtResource("1_obmiq")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_hiw70")
sprite_frames = SubResource("SpriteFrames_hiw70")
animation = &"idle"
speed_scale = 1.5

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.5, 0.4)
shape = SubResource("RectangleShape2D_6attn")
debug_color = Color(0.748183, 0.881543, 0.57097, 0.42)

[node name="DeleteLayer" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="DeleteLayer"]
texture_filter = 1
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -40.0
offset_right = 14.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
text = "f"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ColorRect" type="ColorRect" parent="DeleteLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -34.0
offset_right = 14.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.791879, 0.155743, 0.393913, 0.258824)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hiw70")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
